# 2024-fintech-final-rag-app

./: .gitignore  README.md  gen_gcp_api_key.py  pyproject.toml  reference.md  util.py
Preprocess/: db.py  ocr.py
Retrieval/: gemini-naive.py  qa.py
module/: __init__.py  util.py
